添加图表显示结果

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,10 +82,10 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:gravity="center"
-                        android:hint="0"
+                        android:hint="@string/zero"
                         android:inputType="number"
                         android:maxLength="8"
-                        android:text="2746200"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvPower"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tvPower"
@@ -183,7 +183,7 @@
                         android:hint="0"
                         android:inputType="number"
                         android:maxLength="4"
-                        android:text="689"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvFire"
                         app:layout_constraintEnd_toStartOf="@+id/tvDefence"
                         app:layout_constraintHorizontal_bias="0.191"
@@ -203,7 +203,7 @@
                         android:hint="0"
                         android:inputType="number"
                         android:maxLength="4"
-                        android:text="622"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvDefence"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tvDefence"
@@ -221,7 +221,7 @@
                         android:hint="0"
                         android:inputType="number"
                         android:maxLength="4"
-                        android:text="508"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvSpeed"
                         app:layout_constraintEnd_toEndOf="@+id/etFire"
                         app:layout_constraintHorizontal_bias="0.888"
@@ -242,7 +242,7 @@
                         android:hint="0"
                         android:inputType="number"
                         android:maxLength="4"
-                        android:text="464"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvLuck"
                         app:layout_constraintEnd_toEndOf="@+id/etDefence"
                         app:layout_constraintHorizontal_bias="0.47"
@@ -295,7 +295,7 @@
                         android:hint="0"
                         android:inputType="number"
                         android:maxLength="3"
-                        android:text="2746200"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvSuperClone"
                         app:layout_constraintStart_toEndOf="@+id/tvSuperClone"
                         app:layout_constraintTop_toTopOf="@+id/tvSuperClone" />
@@ -330,7 +330,7 @@
                         android:hint="0"
                         android:inputType="number"
                         android:maxLength="3"
-                        android:text="2746200"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvLowClone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/tvLowClone" />
@@ -358,7 +358,7 @@
                         android:hint="0"
                         android:inputType="number"
                         android:maxLength="3"
-                        android:text="2746200"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvMediumClone"
                         app:layout_constraintEnd_toStartOf="@+id/tvLowClone"
                         app:layout_constraintStart_toEndOf="@+id/tvMediumClone"
@@ -410,7 +410,7 @@
                         android:inputType="number"
                         android:maxLength="6"
                         android:singleLine="false"
-                        android:text="72000"
+                        android:text="@string/zero"
                         app:layout_constraintBottom_toBottomOf="@+id/tvSatellite"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tvSatellite"
