--- a/app/src/main/res/layout/clone.xml
+++ b/app/src/main/res/layout/clone.xml
@@ -43,7 +43,8 @@
             android:gravity="center"
             android:hint="0"
             android:inputType="number"
-            android:text="2"
+            android:maxLength="6"
+            android:text="@string/zero"
             app:layout_constraintBottom_toBottomOf="@+id/tvCloneLoss"
             app:layout_constraintStart_toEndOf="@+id/tvCloneLoss"
             app:layout_constraintTop_toTopOf="@+id/tvCloneLoss"
@@ -79,7 +80,7 @@
             android:hint="0"
             android:inputType="number"
             android:maxLength="1"
-            android:text="2"
+            android:text="@string/zero"
             app:layout_constraintBottom_toBottomOf="@+id/tvCloneLevel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.312"
@@ -115,7 +116,8 @@
             android:gravity="center"
             android:hint="0"
             android:inputType="number"
-            android:text="31000"
+            android:maxLength="6"
+            android:text="@string/zero"
             app:layout_constraintBottom_toBottomOf="@+id/tvCloneDamageAddition"
             app:layout_constraintStart_toEndOf="@+id/tvCloneDamageAddition"
             app:layout_constraintTop_toTopOf="@+id/tvCloneDamageAddition" />
@@ -139,10 +141,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:maxLength="6"
+            android:text="@string/zero"
             android:gravity="center"
             android:hint="0"
             android:inputType="number"
-            android:text="40000"
             app:layout_constraintBottom_toBottomOf="@+id/tvCloneDamageReduction"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tvCloneDamageReduction" />
@@ -163,7 +166,8 @@
             android:gravity="center"
             android:hint="0"
             android:inputType="number"
-            android:text="3600"
+            android:maxLength="6"
+            android:text="@string/zero"
             app:layout_constraintBottom_toBottomOf="@+id/tvCloneCrit"
             app:layout_constraintStart_toStartOf="@+id/etCloneDamageAdditon"
             app:layout_constraintTop_toTopOf="@+id/tvCloneCrit" />
@@ -191,7 +195,8 @@
             android:gravity="center"
             android:hint="0"
             android:inputType="number"
-            android:text="35000"
+            android:maxLength="6"
+            android:text="@string/zero"
             app:layout_constraintBottom_toBottomOf="@+id/tvCloneRefelcetion"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/etCloneDamageReduction"
