--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,10 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBg">#fff761</color>
     <color name="add">#559fca</color>
-    <color name="o">#f0983c</color>
+    <color name="delete">#f0983c</color>
     <color name="g">#5abb8b</color>
     <color name="p">#a67fc0</color>
-    <color name="delete">#d75f45</color>
+    <color name="load">#d75f45</color>
     <color name="color_text">#444444</color>
     <color name="grey2">#36465d</color>
     <color name="white">#FFFFFF</color>
