--- a/app/src/main/res/layout/clone_qh_settings.xml
+++ b/app/src/main/res/layout/clone_qh_settings.xml
@@ -99,118 +99,14 @@
             app:layout_constraintTop_toTopOf="@+id/tvCloneLoss" />
 
         <TextView
-            android:id="@+id/tvCloneDamageAddition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="@string/clone_damage_addition"
-            app:layout_constraintStart_toStartOf="@+id/tvCloneLoss"
-            app:layout_constraintTop_toBottomOf="@+id/tvCloneLoss" />
-
-        <EditText
-            android:id="@+id/etCloneDamageAdditon"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:gravity="center"
-            android:hint="0"
-            android:inputType="number"
-            android:maxLength="6"
-            android:text="@string/zero"
-            app:layout_constraintBottom_toBottomOf="@+id/tvCloneDamageAddition"
-            app:layout_constraintStart_toEndOf="@+id/tvCloneDamageAddition"
-            app:layout_constraintTop_toTopOf="@+id/tvCloneDamageAddition" />
-
-        <TextView
-            android:id="@+id/tvCloneDamageReduction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/clone_damage_reduction"
-            app:layout_constraintBottom_toBottomOf="@+id/tvCloneDamageAddition"
-            app:layout_constraintEnd_toStartOf="@+id/etCloneDamageReduction"
-            app:layout_constraintStart_toEndOf="@+id/etCloneDamageAdditon"
-            app:layout_constraintTop_toTopOf="@+id/tvCloneDamageAddition"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <EditText
-            android:id="@+id/etCloneDamageReduction"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:maxLength="6"
-            android:text="@string/zero"
-            android:gravity="center"
-            android:hint="0"
-            android:inputType="number"
-            app:layout_constraintBottom_toBottomOf="@+id/tvCloneDamageReduction"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvCloneDamageReduction" />
-
-        <TextView
-            android:id="@+id/tvCloneCrit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="@string/clone_damage_crit"
-            app:layout_constraintStart_toStartOf="@+id/tvCloneDamageAddition"
-            app:layout_constraintTop_toBottomOf="@+id/tvCloneDamageAddition" />
-
-        <EditText
-            android:id="@+id/etCloneCrit"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:hint="0"
-            android:inputType="number"
-            android:maxLength="6"
-            android:text="@string/zero"
-            app:layout_constraintBottom_toBottomOf="@+id/tvCloneCrit"
-            app:layout_constraintStart_toStartOf="@+id/etCloneDamageAdditon"
-            app:layout_constraintTop_toTopOf="@+id/tvCloneCrit" />
-
-        <TextView
-            android:id="@+id/tvCloneRefelcetion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/clone_damage_reflection"
-            app:layout_constraintBottom_toBottomOf="@+id/tvCloneCrit"
-            app:layout_constraintEnd_toEndOf="@+id/tvCloneDamageReduction"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/tvCloneDamageReduction"
-            app:layout_constraintTop_toTopOf="@+id/tvCloneCrit"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <EditText
-            android:id="@+id/etCloneRefelection"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:hint="0"
-            android:inputType="number"
-            android:maxLength="6"
-            android:text="@string/zero"
-            app:layout_constraintBottom_toBottomOf="@+id/tvCloneRefelcetion"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/etCloneDamageReduction"
-            app:layout_constraintTop_toTopOf="@+id/tvCloneRefelcetion" />
-
-        <TextView
             android:id="@+id/tvTs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="@string/clone_angel"
 
-            app:layout_constraintStart_toStartOf="@+id/tvCloneCrit"
-            app:layout_constraintTop_toBottomOf="@+id/tvCloneCrit" />
+            android:layout_marginTop="24dp"
+            android:text="@string/clone_angel"
+            app:layout_constraintStart_toStartOf="@+id/tvCloneLoss"
+            app:layout_constraintTop_toBottomOf="@+id/tvCloneLoss" />
 
         <Spinner
             android:id="@+id/spinnerAngel"
@@ -284,10 +180,8 @@
             android:id="@+id/tvDragon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
             android:text="@string/dragon"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tvMutant"
             app:layout_constraintTop_toBottomOf="@+id/tvMutant" />
 
@@ -299,6 +193,28 @@
             app:layout_constraintBottom_toBottomOf="@+id/tvDragon"
             app:layout_constraintStart_toStartOf="@+id/spinnerMutant"
             app:layout_constraintTop_toTopOf="@+id/tvDragon" />
+
+        <TextView
+            android:id="@+id/tvLksjs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/lksjs"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/tvDragon"
+            app:layout_constraintStart_toStartOf="@+id/tvDragon"
+            app:layout_constraintTop_toBottomOf="@+id/tvDragon" />
+
+        <Spinner
+            android:id="@+id/spinnerLksjs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/clone"
+            app:layout_constraintBottom_toBottomOf="@+id/tvLksjs"
+            app:layout_constraintEnd_toEndOf="@+id/spinnerDragon"
+            app:layout_constraintStart_toStartOf="@+id/spinnerDragon"
+            app:layout_constraintTop_toTopOf="@+id/tvLksjs" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
