--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,12 @@
     <color name="add">#559fca</color>
     <color name="delete">#f0983c</color>
     <color name="g">#5abb8b</color>
-    <color name="p">#a67fc0</color>
+    <color name="purple">#a67fc0</color>
     <color name="load">#d75f45</color>
     <color name="color_text">#444444</color>
     <color name="grey2">#36465d</color>
     <color name="white">#FFFFFF</color>
+    <color name="red_normal">#FF0000</color>
+    <color name="red_pressed">#FF6666</color>
+    <color name="label">#9c9c9c</color>
 </resources>
